<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mean, Median, Mode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="t1">Usage:</string>
    <string name="p1">Insert number values separated by commas. Press the book icon for more information.</string>
    <string name="num_hint">num1, num2, etc...</string>
    <string name="b1">Mean</string>
    <string name="credittitle">Background:</string>
    <string name="dialog_title">Answer:</string>
    <string name="CE">C</string>
    <string name="title_activity_options_page">Options Page</string>
    <string name="ac">Clear input on solve</string>
    <string name="TB">FALSE</string>
    <string name="about">\u00A9 2013</string>
    <string name="cb">Copy answer to clipboard</string>
    <string name="options">Options:</string>
    <string name="about2">About</string>
    <string name="rate">Rate</string>
    <string name="version">Mean, Median, Mode (MeanFind) is an app I made to try and learn the android development process. I found the process very pleasing and look forward to doing more work in code. If you would like you can rate Mean, Median, Mode in the app sotre using the button above.        -Matt</string>
    <string name="COMMA">,</string>
    <string name="dataLabel">Data:</string>
    <string name="title_activity_about_page">About</string>
    <string name="web">Website</string>
    <string name="b2">Median</string>
    <string name="b3">Mode</string>
    <string name="learn">Click here to learn them!</string>
    <string name="title_activity_learn">LearnActivity</string>
    <string name="learn2">Learn</string>
    <string name="meaninfo">The mean is the average of the sum in a series. To find it add up all the numbers in the series and divide the result by the amount of numbers. Ex: 2,5,10 would be (2 + 5 + 10)/3 = 5.67</string>
    <string name="medianinfo">The median is the middle number in a set of data. To find it, sort the numbers going from smallest to largest. Then, find the middle number. If there are two middle numbers you add them together and divide by two.</string>
    <string name="modeinfo">The mode is the number that occurs most often for a set of data. There can be one mode, multiple modes, or no mode if each number occurs only once.</string>
    <string name="wiki">More info</string>

</resources>