<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutPage" >

    <Button
            style="100dp"
            android:id="@+id/button"
            android:layout_marginTop="10dp"
            android:onClick="website"
            android:text="@string/web"
            android:clickable="true"
            android:width="60dp"
            android:layout_height="wrap_content"
            android:layout_width="120dp"
            android:layout_column="26"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_column="25"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"/>

    <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:onClick="rateApp"
            android:id="@+id/button2"
            android:layout_alignTop="@+id/button"
            android:layout_alignRight="@+id/textView2"
            android:layout_marginRight="14dp"/>

</RelativeLayout>